fix(tabs): add overflow hidden and white-space nowrap for handling long titles

--- a/src/page/header/styles/top/tabs-area.css
+++ b/src/page/header/styles/top/tabs-area.css
@@ -78,6 +78,9 @@
   padding-top: 8px;
 
   font-size: small;
+
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .tab-close-btn {
